--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ before_deploy:
   - yarn run build
 deploy:
   provider: s3
+  region: us-west-1
   access_key_id: $AWS_ACCESS_KEY_ID
   secret_access_key: $AWS_SECRET_ACCESS_KEY
   bucket: $S3_BUCKET
