--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     }
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.3.6",
-    "nuxt": "^2.0.0",
+    "@nuxtjs/axios": "^5.11.0",
+    "nuxt": "^2.13.2",
     "suitcss-base": "^5.0.0",
     "suitcss-components-button": "^6.0.2",
     "suitcss-components-form": "^1.0.1",
@@ -31,19 +31,19 @@
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^1.0.1",
-    "@nuxtjs/eslint-module": "^1.0.0",
-    "@vue/test-utils": "^1.0.0-beta.27",
-    "babel-eslint": "^10.0.1",
+    "@nuxtjs/eslint-module": "^1.2.0",
+    "@vue/test-utils": "^1.0.3",
+    "babel-eslint": "^10.1.0",
     "babel-jest": "^24.1.0",
-    "eslint": "^6.1.0",
+    "eslint": "^6.8.0",
     "eslint-config-prettier": "^4.1.0",
-    "eslint-plugin-nuxt": ">=0.4.2",
-    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-nuxt": "^1.0.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "husky": "^2.6.0",
     "jest": "^24.1.0",
     "lint-staged": "^8.2.1",
     "postcss-preset-env": "^6.7.0",
-    "prettier": "^1.16.4",
-    "vue-jest": "^4.0.0-0"
+    "prettier": "^1.19.1",
+    "vue-jest": "^4.0.0-beta.3"
   }
 }
